[package]
name = "aptos-indexer-grpc-data-service"
description = "Aptos Indexer gRPC data service to serve the cached indexer data."
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
aptos-crash-handler = { workspace = true }
aptos-logger = { workspace = true }
aptos-protos = { workspace = true }
deadpool-redis = { workspace = true }
futures = { workspace = true }
moving-average = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
warp = { workspace = true }
